@@ -1,6 +1,6 @@
 Package: mi
-Version: 0.08-03
-Date: 2009-6-23
+Version: 0.08-04
+Date: 2009-7-21
 Title: Missing Data Imputation and Model Checking
 Author: Andrew Gelman <gelman@stat.columbia.edu>, Jennifer Hill
         <jh1030@columbia.edu>, Masanao Yajima <my2167@columbia.edu>,
@@ -11,6 +11,6 @@ Depends: methods, MASS, nnet, car, arm, lme4, R2WinBUGS, abind
 Description: Missing-data imputation and model checking
 URL: http://www.stat.columbia.edu/~gelman/
 License: GPL (>= 2)
-Packaged: 2009-06-23 14:43:00 UTC; SUYS
+Packaged: 2009-07-23 17:21:11 UTC; SUYS
 Repository: CRAN
-Date/Publication: 2009-06-23 17:52:00
+Date/Publication: 2009-07-24 06:06:22
