@@ -6,7 +6,7 @@
 \alias{mi.info.update.include}
 \alias{mi.info.update.is.ID}
 \alias{mi.info.update.collinear}
-\alias{mi.info.update.transform}
+%\alias{mi.info.update.transform}
 \alias{mi.info.update.imp.order}
 \alias{mi.info.update.determ.pred}
 \alias{mi.info.update.params}
@@ -23,7 +23,7 @@ mi.info.update.level(object, list)
 mi.info.update.include(object, list)
 mi.info.update.is.ID(object, list)
 mi.info.update.collinear(object, list)
-mi.info.update.transform(object, list)
+%mi.info.update.transform(object, list)
 mi.info.update.imp.order(object, list)
 mi.info.update.determ.pred(object, list)
 mi.info.update.params(object, list)
